--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ article a {
 
 footer {
   padding: 1rem;
-  padding-top: .2rem solid #e2e2e2;
+  padding-top: .2rem;
   text-align: center;
 }
 
